# python-client

./: .gitignore  .ruff.toml  2 - Module Test List - 1.1.14 (incomplete).md  2 - Pipelining Test List - 1.1.14.md  2 - System Test List - 1.1.14.md  24c67185-2d6e-476a-912b-c693fa3bed7d.json  4967c4bc-0ed7-4840-ac02-9f3dd4fd1eeb.json  CHANGELOG.md  J-comments 2 - Pipelining Test List - 1.1.14.md  README.md  fdb027be-86ca-49b1-b777-c0d4c411cac9.json  mkdocs.yml  pyproject.toml  requirements.in  requirements.txt  setup.py
.github/workflows/: python-app.yml  python-publish.yml
docs/: index.md  requirements.txt
docs/advanced_details/modules/: click_data.md  introduction.md
docs/examples/: multilingual_transcribe.ipynb  multilingual_transcribe.md  semantic_multilingual_transcribe.ipynb  semantic_multilingual_transcribe.md  transcribe-examples.ipynb  transcribe-translate-pipeline.ipynb  transcribe-translate-semantic-pipeline.ipynb
docs/examples/summarize/: recursive_summarize.ipynb
docs/modules/: caption.ipynb  caption.md  json-to-txt.ipynb  json-to-txt.md  keyword-db.ipynb  keyword-db.md  ocr.ipynb  ocr.md  parser.ipynb  parser.md  scratch.ipynb  sentiment.ipynb  summarize.ipynb  summarize.md  text-embedder.ipynb  transcribe.ipynb  translate.ipynb  translate.md  vector-db.ipynb
docs/pipeline_builder/: create_module.md  existing_modules.md  first_pipeline.md  save_load.md  useful_pipeline_properties.md
docs/system/: index.ipynb  index.md  keyword_search.md  keyword_search_method.md  process.md  vector_search.md  vector_search_method.md
examples/: README.md  sentiment-examples.ipynb  text-search-examples.ipynb  transcribe-examples.ipynb
examples/single_module/: json_to_txt.ipynb  keyword_search.ipynb  parser.ipynb  vector-db.ipynb  vector_search.ipynb
krixik/: __base__.py  __init__.py  main.py
krixik/modules/: __init__.py
krixik/pipeline_builder/: __init__.py  module.py  pipeline.py  utilities.py
krixik/system_builder/: base.py
krixik/utilities/: cleaners.py  file_name_generator.py  tree_illustrator.py  utilities.py
tests/: __init__.py  run_tests.sh
tests/krixik/: __init__.py  test_main.py
tests/utilities/: decorators.py  dynamodb_interactions.py  mocked_requests.py  scheduler_interactions.py  search_inits.py  transcribe_inits.py
(+342 files in other folders)
