[tool.poetry]
name = "krixik"
version = "1.1.12"
description = ""
authors = ["Jeremy Watt <jeremy@krixik.com>"]
readme = "README.md"
homepage = "https://github.com/jermwatt/easy_boto3"
packages = [{include = "krixik"}]


[tool.poetry.scripts]
krixik = "krixik.main:main"


[tool.poetry.dependencies]
requests ="^2.31.1"
ffmpeg-python = "^0.2.0"
moviepy = "^1.0.3"
pytest = "^7.4.3"
pytest-subtests = "^0.11.0"
python-dotenv = "^1.0.0"
pypdf = "^3.17.1"
python-docx = "^1.1.0"
python-pptx = "^0.6.23"
pydub = "^0.25.1"
boto3 = "^1.34.39"



[tool.poetry.dev-dependencies]
pytest = "^8.0.2"
ruff = "^0.3.2"


[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "tests",
    "scratch_notebooks",
    "release_notes",
    "notebook_tests",
    "demos"
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.10
target-version = "py310"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
addopts = [
    # Allow test files to have the same name in different directories.
    "--import-mode=importlib",
]